small spacing fixes

--- a/about.css
+++ b/about.css
@@ -70,7 +70,7 @@
 .sitename a {
 	color: black;
 	position: fixed;
-	margin-top: 17px;
+	margin-top: 21px;
 	margin-left: 72px;
 	font-family: Raleway, sans-serif;
 	font-size: 25px;
@@ -86,12 +86,11 @@
 }
 
 .ninjalogo {
-	float: left;
-	position: fixed;
-	height: 50px;
-	width: 50px;
-	padding-left: 12px;
-	padding-top: 2px;
+	margin-left: 12px;
+    margin-top: 3px;
+    position: fixed;
+    height: 50px;
+    width: 50px;
 
 	-webkit-transition-duration: transform 0.30s;
 	-moz-transition: transform 0.30s;
@@ -128,8 +127,8 @@
     background-color: whitesmoke;
     text-align: center;
     position: fixed;
-	margin-left: 259px;
-	margin-top: 18px;
+	margin-left: 255px;
+	margin-top: 3px;
 	border: 1px solid;
 
 	-webkit-transition: transform 0.3s ease-in;
